--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       <a href="https://www.uic.edu/" target="_blank">UIC</a> pursuing a bachelor's degree in Computer Science.
     </p>
     <p>
-      I have built web applications using React, Next.js, and HTML5. Feel free to check out my past <a onclick="openNav()">projects</a>
+      I have built web applications using React, Next.js, and HTML5. Feel free to check out my past <a onclick="openNav()">projects</a>. All the code for them can be found on my <a href="https://github.com/jtrieu1998">Github</a>
     </p>
     <p>
-      You can check out my past work experiences on my <a href="./Justin Trieu Resume.pdf" target="_blank">Resume</a> or on my <a href="https://github.com/jtrieu1998?tab=repositories" target="_blank">Github</a>
+      You can check out my past work experiences on my <a href="./Justin Trieu Resume.pdf" target="_blank">Resume</a> or on my <a href="https://www.linkedin.com/in/justin-trieu/" target="_blank">Linkedin</a>
     </p>
     <p>
       Outside of programming I enjoy bouldering, volleyball, and <a href="https://www.youtube.com/watch?v=iFiiXkonsXY" target="_blank">Kendama</a> along with other interesting skill toys.
