added profile image, removed projects sidebar, organized projects into a grid, added icon tray for socials and resume, added footer

--- a/index.html
+++ b/index.html
@@ -3,41 +3,66 @@
 <head>
   <link href='https://fonts.googleapis.com/css?family=Alata' rel='stylesheet'>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/7d37a63d08.js" crossorigin="anonymous"></script>
   <meta charset="utf-8">
   <link rel="stylesheet" href="./styles.css">
-  <title>Comfy page</title>
+  <title>Justin Trieu</title>
 </head>
 <body>
-  <div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <h3 id="sideheader">Projects</h3>
-    <a href="https://nextjs-alpha-sepia.now.sh/p/checkSplit">Check Split App</a> 
-    <p>Splits the bill so that tax and tip are split proportionally among the diners</p>
+    <main>
+        <h3 class="header">My name is Justin.</h3>
+        <img id="profile" src="./imgs/Headshot.jfif" alt="Avatar">
+        </br>
+        <div class="icon-tray">
+                <a id="gh" class="logo" href="https://github.com/jtrieu1998" target="_blank">
+                    <i class="fab fa-github"></i>
+                </a>
 
-    <a href="https://jtrieu1998.github.io/it202-project4/">International COVID-19 Tracker</a>
-    <p>Select any country and compare the number of confirmed cases between countries</p>
-    
-    <a href="https://jtrieu1998.github.io/it202-big-project/">U.S. COVID-19 Tracker</a>
-    <p>Select states in the U.S. and whether you would like to see number of people tested, positive cases, and/or deaths</p>
-  </div>
+                <a id="linkedin" class="logo" href="https://www.linkedin.com/in/justin-trieu/" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                </a>
 
+                <a id="ig" class="logo" href="https://www.instagram.com/jtrieu5_/" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                </a>
 
-  <main>
-    <h1 class="header">Hello World.</h1>
-    <h3 class="header">My name is Justin.</h3>
-    <p>I am a software developer interested in web development. I am currently a 4th year student at 
-      <a href="https://www.uic.edu/" target="_blank">UIC</a> pursuing a bachelor's degree in Computer Science.
-    </p>
-    <p>
-      I have built web applications using React, Next.js, and HTML5. Feel free to check out my past <a onclick="openNav()">projects</a>. All the code for them can be found on my <a target="_blank" href="https://github.com/jtrieu1998">Github</a>
-    </p>
-    <p>
-      You can check out my past work experiences on my <a href="./Justin Trieu Resume.pdf" target="_blank">Resume</a> or on my <a href="https://www.linkedin.com/in/justin-trieu/" target="_blank">Linkedin</a>
-    </p>
-    <p>
-      Outside of programming I enjoy bouldering, volleyball, and Kendama along with other interesting skill toys.
-    </p>
-  <main>
+                <a id="resume" class="logo" href="./Justin Trieu Resume.pdf" target="_blank">
+                    <i class="far fa-file-pdf"></i>
+                </a>
+        </div>                
+        <p>I am a software developer interested in all fields of Information Technology. I am currently a 4th year student at 
+            <a href="https://www.uic.edu/" target="_blank">UIC</a> pursuing a bachelor's degree in Computer Science.
+        </p>
+        <p>
+            I have built web applications using React, Next.js, and HTML5. Feel free to check out my past projects . All the code for them can be found on my <a target="_blank" href="https://github.com/jtrieu1998">Github</a>
+        </p>
+        <p>
+            Outside of programming I enjoy bouldering, volleyball, and Kendama along with other interesting skill toys.
+        </p>
+
+        <h3 class="header">Projects</h3>
+        <div class="grid-container">
+            <div>
+                <a class="project" href="https://nextjs-alpha-sepia.now.sh/p/checkSplit">Check Split App</a> 
+                <p>Splits the bill so that tax and tip are split proportionally among the diners</p>
+            </div>
+            <div>
+                <a class="project" href="https://jtrieu1998.github.io/it202-project4/">International COVID-19 Tracker</a>
+                <p>Select any country and compare the number of confirmed cases between countries</p>
+            </div>
+            <div>
+                <a class="project" href="https://jtrieu1998.github.io/it202-big-project/">U.S. COVID-19 Tracker</a>
+                <p>Select states in the U.S. and whether you would like to see number of people tested, positive cases, and/or deaths</p>
+            </div>
+        </div>    
+    </main>
+    <footer>
+        <p>
+            Email: <a href="mailto:jtrieu.chi@gmail.com" target="_blank">
+                jtrieu.chi@gmail.com
+            </a> | Phone: 773.426.0483
+        </p>
+    </footer>
+    <script src="./scripts.js"></script>
 </body>
-<script src="./scripts.js"></script>
 </html>
