removed insta link and added keyboard link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main>
-        <h3 class="header">My name is Justin.</h3>
+        <h3 class="header">My, name is Justin.</h3>
         <img id="profile" src="./imgs/Headshot.jfif" alt="Avatar">
         </br>
         <div class="icon-tray">
@@ -20,10 +20,6 @@
 
                 <a id="linkedin" class="logo" href="https://www.linkedin.com/in/justin-trieu/" target="_blank">
                     <i class="fab fa-linkedin"></i>
-                </a>
-
-                <a id="ig" class="logo" href="https://www.instagram.com/jtrieu5_/" target="_blank">
-                    <i class="fab fa-instagram"></i>
                 </a>
 
                 <a id="resume" class="logo" href="./Justin Trieu Resume.pdf" target="_blank">
@@ -37,7 +33,7 @@
             I have built web applications using React, Next.js, and HTML5. Feel free to check out my past projects . All the code for them can be found on my <a target="_blank" href="https://github.com/jtrieu1998">Github</a>
         </p>
         <p>
-            Outside of programming I enjoy bouldering, volleyball, and Kendama along with other interesting skill toys.
+            Outside of programming I enjoy bouldering, volleyball, Kendama, and building mechanical keyboards.
         </p>
 
         <h3 class="header">Projects</h3>
