--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <main>
-        <h3 class="header">My, name is Justin.</h3>
+        <h3 class="header">Hi, I'm Justin.</h3>
+        <a></a>
         <img id="profile" src="./imgs/Headshot.jfif" alt="Avatar">
         </br>
         <div class="icon-tray">
