--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <h3 class="header">Hi, I'm Justin.</h3>
-        <a></a>
+        <a href="pokerCalc.html"> POKER BITCH </a>
         <img id="profile" src="./imgs/Headshot.jfif" alt="Avatar">
         </br>
         <div class="icon-tray">
