--- a/pokerCalc.html
+++ b/pokerCalc.html
@@ -10,48 +10,9 @@
 </head>
 <body>
     <main>
-        <h3 class="header">Hi, eat me.</h3>
-        <a></a>
-        <img id="profile" src="./imgs/Headshot.jfif" alt="Avatar">
-        </br>
-        <div class="icon-tray">
-                <a id="gh" class="logo" href="https://github.com/jtrieu1998" target="_blank">
-                    <i class="fab fa-github"></i>
-                </a>
-
-                <a id="linkedin" class="logo" href="https://www.linkedin.com/in/justin-trieu/" target="_blank">
-                    <i class="fab fa-linkedin"></i>
-                </a>
-
-                <a id="resume" class="logo" href="./Justin Trieu Resume.pdf" target="_blank">
-                    <i class="far fa-file-pdf"></i>
-                </a>
-        </div>                
-        <p>I am a software developer interested in all fields of Information Technology. I am currently a 4th year student at 
-            <a href="https://www.uic.edu/" target="_blank">UIC</a> pursuing a bachelor's degree in Computer Science.
-        </p>
-        <p>
-            I have built web applications using React, Next.js, and HTML5. Feel free to check out my past projects . All the code for them can be found on my <a target="_blank" href="https://github.com/jtrieu1998">Github</a>
-        </p>
-        <p>
-            Outside of programming I enjoy bouldering, volleyball, Kendama, and building mechanical keyboards.
-        </p>
-
-        <h3 class="header">Projects</h3>
-        <div class="grid-container">
-            <div>
-                <a class="project" href="https://nextjs-alpha-sepia.now.sh/p/checkSplit">Check Split App</a> 
-                <p>Splits the bill so that tax and tip are split proportionally among the diners</p>
-            </div>
-            <div>
-                <a class="project" href="https://jtrieu1998.github.io/it202-project4/">International COVID-19 Tracker</a>
-                <p>Select any country and compare the number of confirmed cases between countries</p>
-            </div>
-            <div>
-                <a class="project" href="https://jtrieu1998.github.io/it202-big-project/">U.S. COVID-19 Tracker</a>
-                <p>Select states in the U.S. and whether you would like to see number of people tested, positive cases, and/or deaths</p>
-            </div>
-        </div>    
+        <form id="num_players">
+            
+        </form>
     </main>
     <footer>
         <p>
