removed poker link

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <main>
         <h3 class="header">Hi, I'm Justin.</h3>
-        <a href="./pokerCalc.html"> POKER BITCH </a>
-        <img id="profile" src="./imgs/Headshot.jfif" alt="Avatar">
+<!--        <a href="./pokerCalc.html"> POKER BITCH </a>-->
+        <img id="profile" src="./imgs/Headshot.jfif" alt ="Avatar">
         </br>
         <div class="icon-tray">
                 <a id="gh" class="logo" href="https://github.com/jtrieu1998" target="_blank">
